--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 asgiref==3.2.3
 beautifulsoup4==4.9.1
+dj-database-url==0.5.0
 Django==3.0.2
 django-crispy-forms==1.8.1
 django-livereload-server==0.3.2
+django-on-heroku==1.0.1
 gunicorn==20.0.4
 Pillow==7.0.0
+psycopg2-binary==2.8.6
 pytz==2019.3
 six==1.15.0
 soupsieve==2.0.1
 sqlparse==0.3.0
 tornado==6.0.4
+whitenoise==5.2.0
